# Slick-Sneaking

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: packaging.cmake
src/: CMakeLists.txt  Data.cpp  Data.h  PCH.h  Utility.cpp  Utility.h  main.cpp
src/Handler/: SneakAttack.cpp  SneakAttack.h
src/Listeners/: Hooks.cpp  Hooks.h
